<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_1"
    tools:context=".registrar">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/logo_domipharma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoDomipharma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="73dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/textoDomipharma"
        android:textColor="@color/RojoDomipharma"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCodVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="110dp"
        android:text="@string/textCodVer"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoDomipharma" />

    <EditText
        android:id="@+id/codVer"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/ponerCodVer"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCodVer" />

    <TextView
        android:id="@+id/textCreeContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="114dp"
        android:text="@string/textCreeContra"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codVer" />

    <EditText
        android:id="@+id/newContra"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textNewContra"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCreeContra" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textCondContra"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newContra" />

    <EditText
        android:id="@+id/confContra"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textConfContra"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/botonIniciar"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="40dp"
        android:background="@color/Oscuro"
        android:text="@string/boton_inicio"
        android:textColor="@color/Blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confContra" />

</androidx.constraintlayout.widget.ConstraintLayout>