<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botonIniciar"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="40dp"
        android:background="@color/Oscuro"
        android:text="@string/boton_inicio"
        android:textColor="@color/Blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/numero"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textNumCel"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoIniciar" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/textContra"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/botonIniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero" />

    <EditText
        android:id="@+id/regisNumero"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="Ingresar número"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoRegistrar" />

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:background="@color/Oscuro"
        android:text="@string/boton_registrar"
        android:textColor="@color/Blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regisNumero" />

    <TextView
        android:id="@+id/textoRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="122dp"
        android:text="@string/texto_registrar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoDomipharma" />

    <TextView
        android:id="@+id/textoO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="176dp"
        android:text="@string/textoO"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonRegistrar" />

    <TextView
        android:id="@+id/textoIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="137dp"
        android:text="@string/texto_iniciar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoO" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/logo_domipharma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoDomipharma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="73dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/textoDomipharma"
        android:textColor="@color/RojoDomipharma"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>